# Synapse

./: .gitignore  README.md  fake_pi_server.py
Aantriksh_hand_sign/: Sign_Language_YOLO11_Colab.ipynb
App/: .flutter-plugins-dependencies  README.md  pubspec.yaml
App/.dart_tool/: package_config.json  package_config_subset  package_graph.json
App/android/: build.gradle  local.properties  settings.gradle
App/android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
App/lib/: camera_service.dart  gesture_classifier.dart  llm_service.dart  main.dart  mediapipe_service.dart  model_downloader.dart  word_buffer.dart
App2/: .gitignore  README.md  analyze.json  analyze_dart.txt  analyze_output.txt  pubspec.yaml
App2/android/: build.gradle.kts
App2/assets/: Sign Language (Prepared By Prantik).xlsx  mascotAnimation.json
App2/lib/: main.dart
App2/scripts/: extract_sign_images.py  push_t5_model.ps1
App2/test/: gesture_transition_service_test.dart  tutorial_repository_test.dart  tutorial_screen_test.dart  widget_test.dart  word_buffer_service_test.dart
Backend/: index.js  package-lock.json  package.json  server.py
EEG/: predict_live.py  predict_live_1.py  record_eeg.py  train_mine.py
WLASL-LSTM/: 1_extract_landmarks.py  2_build_dataset.py  3_train.py  4_app.py  requirements.txt  test_pipeline.py
WLASL-LSTM/test_output/: dataset.npz  labels.json  sign_model.h5  sign_model.tflite
final/: main.py
normal_person/: README.md  pubspec.yaml
normal_person/lib/: main.dart
normal_person/linux/: CMakeLists.txt
normal_person/test/: widget_test.dart
normal_person/web/: index.html  manifest.json
normal_person/windows/: CMakeLists.txt
test/: README.md  Untitled21 (1).ipynb  export_tflite.py  main.py  requirements.txt  serve_best.py  word.py
test/light_weight/: collect.py  model.h5  (+3 more)
tools/: export_t5_tflite.py
(+134 files in other folders)
